remove authorizer from api gateway

--- a/serverless/template.yaml
+++ b/serverless/template.yaml
@@ -25,11 +25,11 @@ Resources:
                 AllowMethods: "'GET,POST,OPTIONS'"
                 AllowHeaders: "'content-type'"
                 AllowOrigin: "'*'"
-            Auth:
-                DefaultAuthorizer: CognitoAuthorizer
-                Authorizers:
-                    CognitoAuthorizer:
-                        UserPoolArn: !GetAtt CognitoUserPool.Arn
+            # Auth:
+            #     DefaultAuthorizer: CognitoAuthorizer
+            #     Authorizers:
+            #         CognitoAuthorizer:
+            #             UserPoolArn: !GetAtt CognitoUserPool.Arn
 
     GetBlogsFunction:
         Type: AWS::Serverless::Function
