--- a/serverless/template.yaml
+++ b/serverless/template.yaml
@@ -14,16 +14,89 @@ Globals:
         Environment:
             Variables:
                 TABLE_NAME: !Ref DynamoDBTable
-                USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
 Resources:
+    CognitoUserPool:
+        Type: AWS::Cognito::UserPool
+        Properties:
+            UserPoolName: !Sub ${AWS::StackName}-UserPool
+            Policies:
+                PasswordPolicy:
+                    MinimumLength: 8
+            AutoVerifiedAttributes:
+                - email
+            UsernameAttributes:
+                - email
+            Schema:
+                - AttributeDataType: String
+                  Name: email
+                  Required: false
+
+    CognitoUserPoolClient:
+        Type: AWS::Cognito::UserPoolClient
+        Properties:
+            UserPoolId: !Ref CognitoUserPool
+            ClientName: !Sub ${AWS::StackName}-UserPoolClient
+            GenerateSecret: false
+            SupportedIdentityProviders:
+                - COGNITO
+            CallbackURLs:
+                - https://example.com/callback
+                - http://localhost:3000/callback
+            AllowedOAuthFlowsUserPoolClient: true
+            AllowedOAuthFlows:
+                - code
+                - implicit
+            AllowedOAuthScopes:
+                - email
+                - openid
+                - profile
+            ExplicitAuthFlows:
+                - ADMIN_NO_SRP_AUTH
+                - USER_PASSWORD_AUTH
+
+    DynamoDBTable:
+        Type: AWS::DynamoDB::Table
+        Properties:
+            AttributeDefinitions:
+                - AttributeName: PK
+                  AttributeType: S
+                - AttributeName: SK
+                  AttributeType: S
+                - AttributeName: GSI1PK
+                  AttributeType: S
+                - AttributeName: GSI1SK
+                  AttributeType: S
+            KeySchema:
+                - AttributeName: PK
+                  KeyType: HASH
+                - AttributeName: SK
+                  KeyType: RANGE
+            GlobalSecondaryIndexes:
+                - IndexName: GSI1
+                  KeySchema:
+                      - AttributeName: GSI1PK
+                        KeyType: HASH
+                      - AttributeName: GSI1SK
+                        KeyType: RANGE
+                  Projection:
+                      ProjectionType: ALL
+                  ProvisionedThroughput:
+                      ReadCapacityUnits: 1
+                      WriteCapacityUnits: 1
+            ProvisionedThroughput:
+                ReadCapacityUnits: 5
+                WriteCapacityUnits: 5
+            StreamSpecification:
+                StreamViewType: NEW_AND_OLD_IMAGES
+
     ApiGateway:
         Type: AWS::Serverless::Api
         Properties:
             StageName: Prod
             Cors:
-                AllowMethods: "'GET,POST,OPTIONS'"
-                AllowHeaders: "'content-type'"
+                AllowMethods: "'*'"
+                AllowHeaders: "'content-type, authorization'"
                 AllowOrigin: "'*'"
             # Auth:
             #     DefaultAuthorizer: CognitoAuthorizer
@@ -179,6 +252,9 @@ Resources:
                       Action:
                           - cognito-idp:SignUp
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -206,6 +282,9 @@ Resources:
                       Action:
                           - cognito-idp:ConfirmSignUp
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -233,6 +312,9 @@ Resources:
                       Action:
                           - cognito-idp:ResendConfirmationCode
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -260,6 +342,9 @@ Resources:
                       Action:
                           - cognito-idp:ForgotPassword
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -287,6 +372,9 @@ Resources:
                       Action:
                           - cognito-idp:ConfirmForgotPassword
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -314,6 +402,9 @@ Resources:
                       Action:
                           - cognito-idp:InitiateAuth
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -336,11 +427,16 @@ Resources:
                         Path: /get-user
                         Method: GET
             Policies:
+                - DynamoDBReadPolicy:
+                      TableName: !Ref DynamoDBTable
                 - Statement:
                       Effect: Allow
                       Action:
                           - cognito-idp:GetUser
                       Resource: !GetAtt CognitoUserPool.Arn
+            Environment:
+                Variables:
+                    USER_POOL_CLIENT_ID: !Ref CognitoUserPoolClient
 
         Metadata:
             BuildMethod: esbuild
@@ -350,79 +446,28 @@ Resources:
                 EntryPoints:
                     - src/handlers/getUser.ts
 
-    CognitoUserPool:
-        Type: AWS::Cognito::UserPool
+    CreateUserFunction:
+        Type: AWS::Serverless::Function
         Properties:
-            UserPoolName: !Sub ${AWS::StackName}-UserPool
+            FunctionName: !Sub ${AWS::StackName}-CreateUser
+            Handler: src/handlers/createUser.handler
+            Events:
+                PostConfirmationTrigger:
+                    Type: Cognito
+                    Properties:
+                        UserPool: !Ref CognitoUserPool
+                        Trigger: PostConfirmation
             Policies:
-                PasswordPolicy:
-                    MinimumLength: 8
-            AutoVerifiedAttributes:
-                - email
-            UsernameAttributes:
-                - email
-            Schema:
-                - AttributeDataType: String
-                  Name: email
-                  Required: false
+                - DynamoDBWritePolicy:
+                      TableName: !Ref DynamoDBTable
 
-    CognitoUserPoolClient:
-        Type: AWS::Cognito::UserPoolClient
-        Properties:
-            UserPoolId: !Ref CognitoUserPool
-            ClientName: !Sub ${AWS::StackName}-UserPoolClient
-            GenerateSecret: false
-            SupportedIdentityProviders:
-                - COGNITO
-            CallbackURLs:
-                - https://example.com/callback
-                - http://localhost:3000/callback
-            AllowedOAuthFlowsUserPoolClient: true
-            AllowedOAuthFlows:
-                - code
-                - implicit
-            AllowedOAuthScopes:
-                - email
-                - openid
-                - profile
-            ExplicitAuthFlows:
-                - ADMIN_NO_SRP_AUTH
-                - USER_PASSWORD_AUTH
-
-    DynamoDBTable:
-        Type: AWS::DynamoDB::Table
-        Properties:
-            AttributeDefinitions:
-                - AttributeName: PK
-                  AttributeType: S
-                - AttributeName: SK
-                  AttributeType: S
-                - AttributeName: GSI1PK
-                  AttributeType: S
-                - AttributeName: GSI1SK
-                  AttributeType: S
-            KeySchema:
-                - AttributeName: PK
-                  KeyType: HASH
-                - AttributeName: SK
-                  KeyType: RANGE
-            GlobalSecondaryIndexes:
-                - IndexName: GSI1
-                  KeySchema:
-                      - AttributeName: GSI1PK
-                        KeyType: HASH
-                      - AttributeName: GSI1SK
-                        KeyType: RANGE
-                  Projection:
-                      ProjectionType: ALL
-                  ProvisionedThroughput:
-                      ReadCapacityUnits: 1
-                      WriteCapacityUnits: 1
-            ProvisionedThroughput:
-                ReadCapacityUnits: 5
-                WriteCapacityUnits: 5
-            StreamSpecification:
-                StreamViewType: NEW_AND_OLD_IMAGES
+        Metadata:
+            BuildMethod: esbuild
+            BuildProperties:
+                Minify: true
+                Target: "es2020"
+                EntryPoints:
+                    - src/handlers/createUser.ts
 
 Outputs:
     # DYNAMODB
