--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -36,14 +36,15 @@
         "gatsby-transformer-remark": "^5.1.1",
         "gatsby-transformer-sharp": "^4.9.0",
         "gbimage-bridge": "^0.2.1",
-        "node-sass": "^6.0.1",
         "prismjs": "^1.26.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
-        "react-intl": "^6.4.2"
+        "react-intl": "^6.4.2",
+        "sass": "^1.63.6"
     },
     "devDependencies": {
+        "@aws-sdk/client-cognito-identity-provider": "^3.363.0",
         "@types/node": "^20.2.1",
         "@types/react": "^18.2.6",
         "@types/react-dom": "^18.2.4",
