--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@fontsource/inter": "^4.5.12",
+        "@react-oauth/google": "^0.11.1",
         "axios": "^1.3.4",
         "dotenv": "^10.0.0",
         "gatsby": "^4.11.1",
